--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ p {
 body {
     text-align: center;
     background-color: #679436;
-    background-image: url(../img/pexels-photo-958168.jpg)
+    background-image: url(../img/pexels-photo-958168.jpg);
 }
 #bank {
     font-size: 2em;
@@ -25,13 +25,14 @@ button {
     height: 100px;
     width: 100px;
     border-radius: 100px;
+    background-image: url(../img/13488047876876.png);
 }        
 #game {
     font-size: 8em;
     height: 500px;
     width: 500px;
     border-radius: 300px;
-    background-image: url('../img/Football.png');
+    background-image: url('../img/Football.png'); 
     background-position: center;
     background-size: cover;
     color: white;
@@ -44,4 +45,33 @@ section {
     padding: 50px;
     height: 100vh;
     padding-top: 100px;
+}
+@media (min-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
+
+}
+@media (min-width: 768px) {
+    h1 {
+        color: white;
+    }
+    .container {
+        max-width: 720px;
+    }
+    .col-md-6 {
+        flex: 0 0 50;
+        max-width: 50%;
+    }
+    .col-md-4 {
+        flex: 0 0 33.3;
+        max-width: 33.3%;
+    }
+}
+.col {
+    padding-left: 15px;
+    padding-right: 15px; 
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 100%;
 }
