--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ h1, h2, h3 {
     color: #FFF;
     font-size: 5em;
 }
+h4 {
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    color: #FFF;
+    font-size: 2.5em;
+}
 p {
     font-family: 'Poppins', sans-serif;
     color: #FFF;
